unpackaged/main/default/objects/Invoice_Run_Log__c/Invoice_Run_Log__c.object-meta.xml
<CustomObject>
    <description>Object used to track number of invoices received from the billing system (Zuora) for each batch.</description>
    <label>Invoice Run Log</label>
    <nameField>
        <displayFormat>INV-RUN-{0000}</displayFormat>
        <label>Invoice Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>