unpackaged/main/default/objects/Invoice_Run_Log__c/fields/Batch_Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processing_State__c</fullName>
    <description>Indicates status of batch job</description>
    <label>Batch Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Processing_States</valueSetName>
    </valueSet>
</CustomField>