unpackaged/main/default/objects/Invoice_Run_Log__c/fields/Number_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoice__c</fullName>
    <description>Number of invoices received from the billing system (Zuora).</description>
    <label>Number of Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>