unpackaged/main/default/objects/Invoice_Run_Log__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Invoice Period Start Date</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>