unpackaged/main/default/objects/Invoice_Run_Log__c/fields/Workflow_Run_Number__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Run_Number__c</fullName>
    <description>Unique workflow run number identifier from the billing system (Zuora).</description>
    <label>Workflow Run Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>